--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,35 @@
-Flask==2.3.2
-gunicorn==19.9.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy>=1.9.2
-scipy>=0.15.1
-nltk==3.5
-scikit-learn>=0.18
-pandas>=0.19
+attrs==23.1.0
 beautifulsoup4==4.9.1
+blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+Flask==2.3.2
+future==0.18.3
+gunicorn==19.9.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
 jsonschema==3.2.0
-tmdbv3api==1.6.1
 lxml==4.6.3
-urllib3==1.26.5
-requests==2.23.0
+MarkupSafe==2.1.2
+nltk==3.5
+numpy==1.24.3
+pandas==2.0.2
 pickleshare==0.7.5
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2023.3
+regex==2023.5.5
+requests==2.31.0
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+soupsieve==2.4.1
+threadpoolctl==3.1.0
+tmdbv3api==1.6.1
+tqdm==4.65.0
+tzdata==2023.3
+urllib3==2.0.2
+Werkzeug==2.3.4
