Auto completion API added

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,6 +2,7 @@ name: Deploy App Engine
 on: [push]
 jobs:
   deploy_website:
+    name: "deploy_website"
     # Add "id-token" with the intended permissions.
     permissions:
       contents: 'read'
@@ -22,3 +23,25 @@ jobs:
 
       - name: 'Deploy'
         run: 'gcloud app deploy'
+
+  deploy_auto_completion:
+    name: "deploy_auto_completion"
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
+        with:
+          project_id: 'cs-683-finalproject'
+
+      - name: 'Deploy'
+        run: 'gcloud functions deploy autoCompletion  --source=./SearchFunction/ --allow-unauthenticated --trigger-http --runtime=nodejs18 --gen2 --region=asia-east2'
