New Autocompletion with elastic

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,4 +44,4 @@ jobs:
           project_id: 'cs-683-finalproject'
 
       - name: 'Deploy'
-        run: 'gcloud functions deploy autoCompletion  --source=./SearchFunction/ --allow-unauthenticated --trigger-http --runtime=nodejs18 --gen2 --region=asia-east2'
+        run: 'gcloud functions deploy autoCompletion  --source=./SearchFunction/ --allow-unauthenticated --trigger-http --runtime=nodejs18 --gen2 --region=asia-east2 --set-secrets "ELASTIC_ID=ELASTIC_ID:1" --set-secrets "ELASTIC_USERNAME=ELASTIC_USERNAME:1" --set-secrets "ELASTIC_PASSWORD=ELASTIC_PASSWORD:1"'
