--- a/API/package.json
+++ b/API/package.json
@@ -1,20 +1,22 @@
 {
   "name": "nodejs-docs-samples-functions-v2-hello-big-query",
-  "version": "0.0.1",
   "private": true,
-  "license": "Apache-2.0",
-  "author": "Google LLC",
   "engines": {
     "node": ">=12.0.0"
   },
   "dependencies": {
     "@google-cloud/bigquery": "^6.0.0",
     "@google-cloud/functions-framework": "^3.1.0",
-    "@elastic/elasticsearch": "^7.17.0"
+    "@elastic/elasticsearch": "^7.17.0",
+    "axios": "^1.4.0",
+    "@google-cloud/firestore": "^6.6.0",
+    "firebase-admin": "^11.8.0"
   },
   "devDependencies": {
     "c8": "^7.13.0",
     "mocha": "^10.0.0",
     "supertest": "^6.0.0"
-  }
+  },
+  "main": "index.js",
+  "type": "module"
 }
